--- a/src/components/Chat/ChatPanel.module.css
+++ b/src/components/Chat/ChatPanel.module.css
@@ -1,40 +1,22 @@
-.outside_modal {
-    margin-left: 85%;
-    margin-bottom: 55%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #171d27;
-    z-index: 2;
-    background: rgba(1, 0, 16, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
-    border-radius: var(--border-radius);
-    transition: all var(--animation-speed) ease-in-out;
-    position: fixed;
-    bottom: 20px;
-}
+
 
 .modal_body {
-  display: flex;
+  display: block;
   flex-direction: column-reverse;
   border: solid 1px transparent;
   background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, #7371FC, #CDC1FF, #7371FC);
   background-origin: border-box;
   background-clip: content-box, border-box;
   box-shadow: 2px 1000px 1px #171D27 inset;
-  transition: box-shadow var(--animation-speed) ease-in-out;
   cursor: pointer;
   height: 479px;
   width: 424px;
-  bottom: -100%;
   border-radius: var(--border-radius);
   color: white;
-  position: absolute;
+  position: sticky;
+  
   aspect-ratio: 5/6;
-  margin-left: -195%;
-  margin-bottom: 49% !important;
+  
   overflow: auto;
   transform: rotate(-180deg);
 
@@ -50,8 +32,8 @@
 .main_body {
     width: 90%;
     margin-bottom: 20%;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    align-self: stretch
 }
 
 .chat_body {
@@ -124,12 +106,12 @@
     /* bottom: -100%; */
     border-radius: var(--border-radius);
     color: white;
-    position: absolute;
+    position: static;
     aspect-ratio: 5/6;
     /* margin-left: -195%; */
     margin-bottom: 2% !important;
     margin-top: 0;
-    overflow: auto;
+    overflow: scroll;
     transform: rotate(-180deg);
     /* min-height: 80vh;
 }
@@ -213,3 +195,5 @@
     order: 0;
     flex-grow: 0;
 }
+
+
