--- a/src/components/Chat/MessagePanel/Room/Room.module.css
+++ b/src/components/Chat/MessagePanel/Room/Room.module.css
@@ -12,13 +12,14 @@
 }
 
 .dropdown {
-    width: 400px;
+    width: 92%;
     user-select: none;
     margin: -5px auto;
     position:relative;
+    padding: 3px;
 }
 
-.dropdown .dropdown_btn {
+ .dropdown_btn {
     padding: 15px 16px;
     background: #171d27;
     box-shadow: 3px 3px 10px 6px rgba(0,0,0,0.06);
@@ -28,6 +29,8 @@
     align-items: center;
     cursor: pointer;
     justify-content: space-between;
+    display:flex;
+    flex-direction: row;
 }
 
 .dropdown .dropdown_content {
@@ -66,7 +69,6 @@ opacity: 0.5;
 .star_icon_selected_room{
     height: 27px;
     width: 27px;
-    margin-left: 223px;
     color: rgba(235, 235, 255, 0.4);
     
     
